--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "typecheck": "wrangler types && react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@react-router/fs-routes": "^7.5.0",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
-    "drizzle-orm": "~0.36.3",
+    "drizzle-kit": "^0.30.6",
+    "drizzle-orm": "^0.41.0",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,7 +31,6 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "dotenv-cli": "^7.4.3",
-    "drizzle-kit": "~0.28.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
