--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,8 +10,12 @@
   "compilerOptions": {
     "composite": true,
     "strict": true,
-    "types": ["node"],
-    "lib": ["ES2022"],
+    "types": [
+      "node"
+    ],
+    "lib": [
+      "ES2022"
+    ],
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler"
