--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "drizzle-orm": "^0.41.0",
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "remix-themes": "^2.0.4",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
